# katago-server

./: .dockerignore  .gitignore  API_REVIEW.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.gpu  Dockerfile.minimal  EXAMPLES.md  GH_PAGES_SETUP.md  LICENSE  Makefile  README.md  RELEASING.md  analysis_config.cfg.combo-cpu  analysis_config.cfg.combo-gpu  analysis_config.cfg.cpu  analysis_config.cfg.example  analysis_config.cfg.gpu  analysis_config.cfg.human-cpu  analysis_config.cfg.human-gpu  config.toml.example  docker-compose.yml  docker-setup.sh  gtp_config.cfg.cpu  gtp_config.cfg.example  gtp_config.cfg.gpu  index.html  index.yaml  katago-server.service  setup.sh  test.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker-publish.yml  helm-release.yml  release.yml  rust-ci.yml
charts/katago-server/: Chart.yaml  README.md  values-examples.yaml  values.yaml
charts/katago-server/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: analysis_engine.rs  api.rs  config.rs  error.rs  katago_bot.rs  main.rs
